--- a/src/Components/AboutUspage/Aboutus.css
+++ b/src/Components/AboutUspage/Aboutus.css
@@ -18,16 +18,16 @@
 
 .Aboutusheropage{
     width: 100%;
-    height: 70%;
-    /* background-color: blue; */
+    height: 80%;
+    background-color: blue;
     display: flex;
     align-items: center;
     /* justify-content: center; */
     background-image: url(public/Rectangle.png);
-    /* background-position: center; */
+    background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
-    object-fit: fill;
+    object-fit: contain;
 }
 
 .Aboutusherotext{
@@ -53,8 +53,8 @@
     display: flex;
     align-items: center;
     font-family:  sans-serif;
-    font-size: 40px;
-    font-weight: 900;
+    font-size: 20px;
+    font-weight: 800;
     /* font-style: normal; */
 }
 
@@ -115,8 +115,8 @@
 
 .Empowerimprovehealthtext1 h2{
     font-family: sans-serif;
-    font-weight: 600;
-    font-size: 30px;
+    font-weight: 800;
+    font-size: 19px;
 
 }
 
@@ -137,7 +137,7 @@
 
 .Empowerimprovehealthtext2 p{
     font-family: sans-serif;
-    font-size: 17px;
+    font-size: 13px;
     
 }
     
@@ -166,15 +166,16 @@
 .Keyfeaturesmainbody{
     width: 80%;
     height: 100%;
-    background-color: #2C7DA0;
-    /* display: flex; */
-    /* align-items: center; */
-    /* justify-content: center; */
+    /* background-color: #2C7DA0; */
+    display: flex; 
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
 }
 
 .Keyfeaturesthemain{
     width: 100%;
-    height: 10%;
+    height: 25%;
     /* background-color: blue; */
     display: flex;
     align-items: center;
@@ -188,12 +189,13 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    color: white;
+    /* color: white; */
 }
 
 .Keyfeaturesthemtext h2{
     font-family: sans-serif;
-    font-size: 30px;
+    font-size: 20px;
+    font-weight: 800;
 }
 
 .Keyfeaturesthembox{
@@ -206,11 +208,12 @@
 }
 
 .Keyfeaturesthemboxs{
-    width: 33%;
-    height: 98%;
-    background-color: white;
+    width: 30%;
+    height: 80%;
+    /* background-color: red; */
     font-family: sans-serif;
-    border: hwb(hue white black);
+    /* border: hwb(hue white black); */
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 }
 
 .Keyfeaturesthemboxtext{
@@ -234,6 +237,8 @@
 
 .Keyfeaturesthemboxtext1 h3{
     font-family: sans-serif;
+    font-size: 13px;
+    font-weight: 800;
     
 }
 
@@ -279,18 +284,20 @@
 }
 
 .Keyfeaturesthemboxtextcontext2 p{
-    font-size: 13px;
+    font-size: 12px;
     text-align: center;
 }
 
 
 .Keyfeaturesthemboxs2{
-    width: 33%;
-    height: 98%;
-    background-color: white;
+    width: 30%;
+    height: 80%;
+    /* background-color: red; */
     font-family: sans-serif;
     border: hwb(hue white black);
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 }
+
 
 .Keyfeaturesthemboxstext2{
     width: 100%;
@@ -309,6 +316,17 @@
     align-items: center;
     justify-content: center;
 }
+
+.Keyfeaturesthemboxsmaintext2 h3{
+    font-family: sans-serif;
+    font-size: 13px;
+    font-weight: 800;
+}
+
+
+
+
+
 
 .Keyfeaturesthemboxseconbox2{
     width: 100%;
@@ -356,11 +374,12 @@
 }
 
 .Keyfeaturesthemboxs3{
-    width: 33%;
-    height: 98%;
+    width: 30%;
+    height: 80%;
     background-color: white;
     font-family: sans-serif;
-    border: hwb(hue white black);
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+    /* border: hwb(hue white black); */
 }
 
 .Keyfeaturesthemboxscon3{
@@ -419,7 +438,7 @@
 
 .Ourmissionandvisionpage{
     width: 100%;
-    height: 550px;
+    height: 600px;
     /* background-color: blue;   */
     display: flex;
     align-items: center;
@@ -430,13 +449,17 @@
 .Ourmissionandvisionmainpage{
     width: 80%;
     height: 100%;
-    background-color: white;
+    /* background-color: red; */
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    justify-content: space-between;
     box-shadow: 0px 10px 5px 0px rgba(223,226,235,0.75);
 }
 
 .Ourmissionandvisionmainpageup{
     width: 100%;
-    height: 50%;
+    height: 48%;
     /* background-color: blueviolet; */
     display: flex;
 
@@ -490,8 +513,8 @@
 
 .Ourmissiontext h2{
     font-family: sans-serif;
-    font-size: 30px;
-    font-weight: bold;
+    font-size: 23px;
+    font-weight: 800;
 }
 
 .Ourmissiontext2{
@@ -511,13 +534,13 @@
 }
 
 .Ourmissionmaintext2 p{
-    font-size: 17px;
+    font-size: 13px;
     text-align: center;
 }
 
 .Ourmissionandvisionmainpagedown{
     width: 100%;
-    height: 50%;
+    height: 48%;
     /* background-color: brown; */
     display: flex;
 }
@@ -551,7 +574,8 @@
 
 .Ourvisiondownlefttext1 h2{
     font-family: sans-serif;
-    font-size: 30px;
+    font-size: 23px;
+    font-weight: 800;
 }
 
 .Ourvisionmainpagetextleft2{
@@ -571,7 +595,7 @@
 }
 
 .Ourvisionmainpagetextdownleft2 p{
-    font-size: 17px;
+    font-size: 13px;
 }
 
 .Ourvisionmainpagedownright{
@@ -605,7 +629,7 @@
 
 .Ourteammainpage{
     width: 100%;
-    height: 500px;
+    height: 400px;
     /* background-color: aqua; */
     display: flex;
     align-items: center;
@@ -644,7 +668,8 @@
 
 .Ourteammainpageinnertext h2{
     font-family: sans-serif;
-    font-size: 30px;
+    font-size: 25px;
+    font-weight: 800;
 
 }
 
@@ -668,7 +693,7 @@
 }
 
 .Ourteammaininnertext2 p{
-    font-size: 17px;
+    font-size: 13px;
     text-align: center;
 }
 
@@ -737,6 +762,7 @@
 
 .Ourterfirstcname1 h3{
     font-family: sans-serif;
+    font-size: 10px;
     font-weight: 800;
 }
 
@@ -751,7 +777,7 @@
 
 .Ourterfirstcname2 p{
     font-family: sans-serif;
-    font-size: 12px;
+    font-size: 7px;
 }
 
 .Ourtersecondcirclbox1{
@@ -981,8 +1007,14 @@
     height: 100%;
   }
 
+  .Aboutusherotext1{
+    font-size: 28px;
+  }
+
+
   .Empowerimprovehealthbox{
     width: 80%;
+    height: 80%;
   }
 
   .Empowerimprovehealthbox1{
@@ -995,15 +1027,24 @@
 }
 
 .Empowerimprovehealthtext1 h2{
-    font-size: 19px;
+    font-size: 15px;
+    /* background-color: red; */
 }
 
   .Empowerimprovehealthtext2 p{
-    font-size: 13px;
+    font-size: 10px;
+  }
+
+
+  .Keyfeaturesthemtext h2{
+    font-size: 15px;
+    font-weight: 800;
   }
   
-  .Keyfeaturesthemtext h2{
-    font-size: 19px;
+
+  
+  .Keyfeaturesthemboxtext1 h3{
+    font-size: 10px;
   }
 
   .Keyfeaturesmainbody{
@@ -1011,28 +1052,36 @@
     height: 80%;
   }
 
-  .Keyfeaturesthemboxtext1 h3{
-    font-size: 14px;
-  }
-
   .Keyfeaturesthemboxtextcontext2 p{
-    font-size: 12px;
+    font-size: 9px;
     text-align: center;
   }
 
   .Keyfeaturesthemboxsmaintext2 h3{
-    font-size: 14px;
-    text-align: center;
+    font-size: 10px;
+    /* text-align: center; */
+  }
+  .Ourmissionandvisionmainpage{
+    height: 75%;
   }
   
 
  .Ourmissiontext h2{
     font-size: 19px;
+    font-weight: 700;
  } 
 
+ .Ourmissiontext2{
+    width: 100%;
+    height: 50%;
+    /* background-color: red; */
+    
+ }
+
  .Ourmissionmaintext2 p{
-    font-size: 13px;
+    font-size: 10px;
     text-align: center;
+    /* padding-top: 30px;   */
  }
 
 .Ourmissionandpageupleftcirlce{
@@ -1044,12 +1093,13 @@
 }
 
 .Ourvisiondownlefttext1 h2{
-    font-size: 19px;
+    font-size: 15px;
+    font-weight: 700;
 
 }
 
 .Ourvisionmainpagetextdownleft2 p{
-    font-size:13px ;
+    font-size:10px ;
     text-align: center;
 }
     
@@ -1061,11 +1111,11 @@
 }
 
 .Ourteammainpageinnertext h2{
-    font-size: 19px;
+    font-size: 15px;
 }
 
 .Ourteammaininnertext2 p{
-    font-size: 13px;
+    font-size: 10px;
     text-align: center;
 }
 
@@ -1094,6 +1144,14 @@
     height: 45%;
 }
 
+.Ourterfirstcname1 h3{
+    font-size: 8px;
+}
+
+.Ourterfirstcname2 p{
+    font-size: 7px;
+}
+
 
 }
 
@@ -1110,7 +1168,7 @@
       }
 
       .Aboutusherotext1 h2{
-        font-size: 30px;
+        font-size: 17px;
         display: flex;
         align-items: center;
         justify-content: center;
@@ -1120,7 +1178,7 @@
       .Aboutusheropage{
         width: 100%;
         background-position: center;
-        /* background-size: cover; */
+        background-size: cover;
         
 
       }
@@ -1141,17 +1199,15 @@
 
 
       .Empowerimprovehealthtext1 h2{
-        font-size: 13px;
-      }
-
-      .Empowerimprovehealthtext2 p{
         font-size: 12px;
       }
 
+      .Empowerimprovehealthtext2 p{
+        font-size: 10px;
+      }
 
-
-
-
-
-    
+      .Keyfeaturesthemtext h2{
+        font-size: 12px;
+      }
+   
 }
