--- a/src/Components/PatientDashboard/PatientHeader.css
+++ b/src/Components/PatientDashboard/PatientHeader.css
@@ -5,3 +5,8 @@
     white-space: nowrap;
     overflow: hidden;
 } */
+
+.dashboard-header-wrapper2{
+    justify-content: space-between;
+    /* background-color: red; */
+}
