--- a/src/Components/Contactuspage/Contactus.css
+++ b/src/Components/Contactuspage/Contactus.css
@@ -57,15 +57,15 @@
 
 .ContactusHeroText h2{
     font-family: sans-serif;
-    font-size: 40px;
-    font-weight: 900;
+    font-size: 30px;
+    font-weight: 800;
     color: white;
 }
 
 
 .Contactuslistpage{
     width: 100%;
-    height: 500px;
+    height: 450px;
     /* background-color: red; */
     display: flex;
     align-items: center;
@@ -78,7 +78,7 @@
 
 .Contactuslistpagewrapper{
     width: 85%;
-    height: 90%;
+    height: 80%;
     /* background-color: blue; */
     display: flex;
     align-items: center;
@@ -86,8 +86,8 @@
 }
 
 .Contactusmainlistpage{
-    width: 60%;
-    height: 100%;
+    width: 55%;
+    height: 90%;
     background-color: white;
     border-radius: 10px;
     border: solid #57B5B5 1px;
@@ -131,6 +131,7 @@
     font-family: sans-serif;
     font-weight: 700;
     /* color: red; */
+    font-size: 17px;
 }
 
 .Contacttlefirstname{
@@ -162,6 +163,11 @@
     /* background-color: greenyellow; */
 }
 
+.Contactusfirstname p{
+    font-size: 10px;
+    font-family: sans-serif;
+}
+
 .Contactusfirstnamebox{
     width: 100%;
     height: 70%;
@@ -190,6 +196,12 @@
     height: 25%;
     /* background-color: brown; */
 }
+
+.Contactuslastnameright p{
+    font-size: 10px;
+    font-family: sans-serif;
+}
+
 
 .Contactuslastnamerightbox{
     width: 100%;
@@ -229,6 +241,11 @@
     /* background-color: lightgreen; */
 }
 
+.Contactseconlistleftemail p{
+    font-size: 10px;
+    font-family: sans-serif;
+}
+
 .Contactseconlistleftemailinput{
     width: 100%;
     height: 50%;
@@ -264,6 +281,11 @@
     width: 100%;
     height: 25%;
     /* background-color: aqua; */
+}
+
+.Contactustitlettitlebox p{
+    font-size: 10px;
+    font-family: sans-serif;
 }
 
 .Contactustitlettitlinput{
@@ -348,6 +370,17 @@
     border: hwb(hue white lightseagreen);
 }
 
+.Contactumainsubmibtn button{
+    width: 100%;
+    height: 100%;
+    background-color: #2C7DA0;
+    color: white;
+    border: none;
+    border-radius: 8px;
+    cursor: pointer;
+    /* border: solid  #57B5B5 1px; */
+}
+
 .Contactussendme{
     width: 30%;
     height: 50%;
@@ -398,7 +431,7 @@
 
 .Contactusinforighttext h3{
     font-family: sans-serif;
-    font-size: 19px;
+    font-size: 17px;
     color: white;
 }
 
@@ -462,7 +495,7 @@
 
 .Contactusboxlinetext h3{
     font-family: sans-serif;
-    font-size: 16px;
+    font-size: 12px;
     font-weight: 600;
     color: white;
 }
@@ -484,7 +517,7 @@
 
 .Contactdinfolinetext2 p{
     font-family: sans-serif;
-    font-size: 10px;
+    font-size: 7px;
     color: white;
 
 }
@@ -539,7 +572,7 @@
 
 .Contactusemailrightline1 h3{
     font-family: sans-serif;
-    font-size: 16px;
+    font-size: 12px;
     font-weight: 600;
     color: white;
 
@@ -553,7 +586,7 @@
 
 .Contactusemailrightline2 p{
     font-family: sans-serif;
-    font-size: 10px;
+    font-size: 7px;
     color: white;
 
 }
@@ -587,4 +620,249 @@
     width: 100%;
     height: 20px;
     background-color: red;
+}
+
+@media only screen and (max-width:765px){
+    .ContactusMainpage{
+        width: 100%;
+        height: 100vh;
+        /* background-color: blue; */
+    }
+
+    .ContactusHeropage{
+        width: 100%;
+        height: 70%;
+        background-size: cover;
+        background-repeat: no-repeat;
+        /* background-position: center; */
+        object-fit: contain;
+    }
+
+    .ContactusHeroText h2{
+        font-size: 25px;
+    }
+
+    .Contactuslistpagewrapper{
+        width: 100%;
+        height: 80%;
+    }
+
+    .Contactumainsendmessgae h3{
+        font-size: 15px;
+    }
+
+    .Contactusfirstname p{
+        font-size: 8px;
+    }
+
+    .Contactuslastnameright p{
+        font-size: 8px;
+    }
+
+    .Contactseconlistleftemail p{
+        font-size: 8px;
+    }
+
+    .Contactustitlettitlebox p{
+        font-size: 8px;
+    }
+
+    .Contactusinforighttext h3{
+        font-size: 15px;
+    }
+
+    .Contactusboxlinetext h3{
+        font-size: 9px;
+    }
+
+    .Contactdinfolinetext2 p{
+        font-size: 6px;
+    }
+
+    .Contactusemailrightline1 h3{
+        font-size:9px ;
+    }
+
+    .Contactusemailrightline2 p{
+        font-size: 6px;
+    }
+
+}
+@media only screen and (max-width:428px){
+    .ContactusMainpage{
+        width: 100%;
+        height: 100vh;
+        /* background-color: blue; */
+    }
+
+    .ContactusHeropage{
+        width: 100%;
+        height: 70%;
+        background-size: cover;
+        background-repeat: no-repeat;
+        background-position: center;
+        object-fit: contain;
+    }
+
+    .ContactusHeroText h2{
+        font-size: 15px;
+    }
+
+    .Contactuslistpagewrapper{
+        width: 100%;
+        height: 65%;
+    }
+
+    .Contactumainsendmessgae h3{
+        font-size: 11px;
+    }
+
+    .Contactusfirstname p{
+        font-size: 6px;
+    }
+
+    .Contactuslastnameright p{
+        font-size: 6px;
+    }
+
+    .Contactseconlistleftemail p{
+        font-size: 6px;
+    }
+
+    .Contactustitlettitlebox p{
+        font-size: 6px;
+    }
+
+    .Contactusinforighttext h3{
+        font-size: 50%;
+    }
+
+    .Contactusboxlinetext h3{
+        font-size: 6px;
+    }
+
+    .Contactdinfolinetext2 p{
+        font-size: 4px;
+    }
+
+    .Contactusemailrightline1 h3{
+        font-size:6px ;
+    }
+
+    .Contactusemailrightline2 p{
+        font-size: 4px;
+    }
+
+    .Contactumainsubmibtn {
+        width: 100%;
+        height: 100%;
+        /* background-color: red; */
+    }
+
+    .Contactusdubmibtn{
+        width: 38%;
+        height: 70%;
+    }
+
+    .Contactumainsubmibtn p{
+        font-size: 7px;
+    }
+
+    .Contactussendme{
+        width: 20%;
+        height: 50%;
+    }
+
+}
+@media only screen and (max-width:320px){
+    .ContactusMainpage{
+        width: 100%;
+        height: 100vh;
+        /* background-color: blue; */
+    }
+
+    .ContactusHeropage{
+        width: 100%;
+        height: 60%;
+        background-size: cover;
+        background-repeat: no-repeat;
+        background-position: center;
+        object-fit: contain;
+    }
+
+    .ContactusHeroText h2{
+        font-size: 15px;
+    }
+
+    .Contactuslistpagewrapper{
+        width: 100%;
+        height: 45%;
+    }
+
+    .Contactumainsendmessgae h3{
+        font-size: 9px;
+    }
+
+    .Contactusfirstname p{
+        font-size: 5px;
+    }
+
+    .Contactuslastnameright p{
+        font-size: 5px;
+    }
+
+    .Contactseconlistleftemail p{
+        font-size: 5px;
+    }
+
+    .Contactustitlettitlebox p{
+        font-size: 5px;
+    }
+
+    .Contactusinforighttext h3{
+        font-size: 6px;
+    }
+
+    .Contactusboxlinetext h3{
+        font-size: 5px;
+    }
+
+    .Contactdinfolinetext2 p{
+        font-size: 3px;
+    }
+
+    .Contactusemailrightline1 h3{
+        font-size:5px ;
+    }
+
+    .Contactusemailrightline2 p{
+        font-size: 3px;
+    }
+
+    .Contactumainsubmibtn {
+        width: 100%;
+        height: 100%;
+        /* background-color: red; */
+    }
+
+    .Contactusdubmibtn{
+        width: 38%;
+        height: 70%;
+    }
+
+    .Contactumainsubmibtn p{
+        font-size: 6px;
+    }
+
+    .Contactussendme{
+        width: 18%;
+        height: 50%;
+    }
+
+    .Contactusthowcanwehelpyouinput textarea{
+        width: 100%;
+        height: 100%;
+        initial-letter: 2px;
+    }
+
 }
