--- a/src/Components/PatientDashboard/PatientHeader.css
+++ b/src/Components/PatientDashboard/PatientHeader.css
@@ -10,3 +10,13 @@
     justify-content: space-between;
     /* background-color: red; */
 }
+
+.profile-image-holder{
+    padding: 3px;
+}
+
+.profile-image-holder img{
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+}
