--- a/src/Components/AboutUspage/Aboutus.css
+++ b/src/Components/AboutUspage/Aboutus.css
@@ -1209,5 +1209,332 @@
       .Keyfeaturesthemtext h2{
         font-size: 12px;
       }
-   
+
+      .Keyfeaturesthemboxs{
+        /* width: 50%; */
+        /* background-color: red; */
+        height: 90%;
+      }
+
+      .Keyfeaturesthemboxtext1 h3{
+        font-size: 8px;
+        text-align: center;
+
+      }
+
+      .Keyfeaturesthemboxsmaintext2 h3{
+        font-size: 8px;
+        text-align: center;
+      }
+
+      .Keyfeaturesthemboxtextcontext2 p{
+        font-size: 7px;
+        text-align: center;
+      }
+
+      .Ourmissionandvisionmainpage{
+        /* background-color: red; */
+        width: 80%;
+        
+      }
+
+      .Ourmissionandpageupleft{
+        width: 50%;
+        /* background-color: red; */
+      }
+
+      .Ourmissionandpageupleftcirlce{
+        width: 100%;
+        height: 100%;
+      }
+
+      .Ourmissionandpageupright{
+        width: 50%;
+        /* background-color: green; */
+      }
+
+      .Ourmissionandpageuprighttext{
+        width: 100%;
+        height: 20%;
+        /* background-color: gray; */
+      }
+
+      .Ourmissiontext2{
+        width: 100%;
+        height: 80%;
+        /* background-color: aqua; */
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        text-align: center;
+
+      }
+
+      .Ourmissionmaintext2 p{
+        font-size: 7px;
+      }
+
+      .Ourvisionmainpagedownleft1{
+        /* background-color: gray; */
+        width: 100%;
+        height: 20%;
+
+      }
+
+      .Ourvisionmainpagetextleft2{
+        width: 95%;
+        height: 80%;
+        /* background-color: green; */
+        padding-bottom: 80px;
+        text-align: center;
+    
+      }
+
+      .Ourvisionmainpagetextdownleft22 p{
+        font-size: 7px;
+
+      }
+
+      .Ourvisionmainpagedownright{
+        width: 50%;
+        height: 100%;
+        /* background-color: black; */
+        display: flex ;
+        align-items: center;
+        justify-content: center;
+      }
+
+      .Ourvisionmainpagedownrightcircle{
+        width: 100%;
+        height: 100%;
+        padding-top: 38px;
+      }
+
+
+      .Ourteammainpageinnertext h2{
+        font-size: 10px;
+    }
+
+    .Ourteammaininnertext2 p{
+        font-size: 7px;
+        text-align: center;
+    }
+
+    .Ourmissiontext h2{
+        font-size: 15px;
+        font-weight: 700;
+     } 
+
+     
+.Ourvisionmainpagetextdownleft2 p{
+    font-size:9px ;
+    text-align: center;
+}
+
+.Ourmissionandvisionmainpage{
+    /* background-color: red; */
+    height: 70%;
+}
+
+.Ourmissionandpageupleftcirlce{
+    width: 99%;
+    height: 60%;
+    /* object-fit: cover; */
+    background-position: center;
+    background-size: cover;
+}
+
+.Ourvisionmainpagemainightcircle{
+    width: 99%;
+    height: 60%;
+    background-position: center;
+    background-size: cover;
+}
+
+.Ourteammainpageouterdownbox{
+    width: 100%;
+    height: 40%;
+    /* background-color: red; */
+}
+
+.Ourterfirstcirclbox{
+    width: 20%;
+    height: 100%;
+}
+
+
+.Ourterfirstcirclbox1{
+    width: 55%;
+    height: 45%;
+}
+
+.Ourterfirstcname1 h3{
+    font-size: 6px;
+}
+
+.Ourterfirstcname2 p{
+    font-size: 6px;
+}
+
+    
+}
+@media only screen and (max-width:320px) {
+    /* .AboutusMain{
+        width: 100%;
+        height: 100vh;
+    
+      } */
+    
+      .AboutusmainBody{
+        width: 100%;
+        height: 100%;
+      }
+
+      .Aboutusherotext1 h2{
+        font-size: 15px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+
+      }
+
+      .Aboutusheropage{
+        width: 100%;
+        background-position: center;
+        background-size: cover;
+        
+
+      }
+
+      .Aboutusherotext2 p{
+        font-size: 8px;
+      }
+
+      .Empowerimprovehealthbox{
+        width: 90%;
+        height: 60%;
+      }
+
+      .Empowerimprovehealthbox1{
+        width: 50%;
+        height: 80%;
+      }
+
+
+      .Empowerimprovehealthtext1 h2{
+        font-size: 8px;
+      }
+
+      .Empowerimprovehealthtext2 p{
+        font-size: 7px;
+      }
+
+      .Keyfeaturesthemtext h2{
+        font-size: 6px;
+      }
+
+      .Keyfeaturesthemboxs{
+        /* background-color: red; */
+        width: 38%;
+        height: 32%;
+      }
+      .Keyfeaturesthembox{
+        width: 100%;
+        height: 100%;
+        /* background-color: darkolivegreen; */
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: space-between;
+    }
+
+      .Keyfeaturesthemboxtext1 h3{
+        font-size: 5px;
+        text-align: center;
+
+      }
+
+      .Keyfeaturesthemboxsmaintext2 h3{
+        font-size: 5px;
+        text-align: center;
+      }
+
+      .Keyfeaturesthemboxtextcontext2 p{
+        font-size: 4px;
+      }
+
+      .Ourteammainpageinnertext h2{
+        font-size: 7px;
+    }
+
+    .Ourteammaininnertext2 p{
+        font-size: 6px;
+        text-align: center;
+    }
+
+    .Ourmissiontext h2{
+        font-size: 8px;
+        font-weight: 700;
+     } 
+
+     .Ourmissionmaintext2 p{
+        font-size: 5px;
+     }
+
+     .Ourvisiondownlefttext1 h2{
+        font-size: 8px;
+     }
+
+     
+.Ourvisionmainpagetextdownleft22 p{
+    font-size:5px ;
+    text-align: center;
+}
+
+.Ourmissionandvisionmainpage{
+    /* background-color: red; */
+    height: 70%;
+}
+
+.Ourmissionandpageupleftcirlce{
+    width: 99%;
+    height: 40%;
+    /* object-fit: cover; */
+    background-position: center;
+    background-size: cover;
+}
+
+.Ourvisionmainpagemainightcircle{
+    width: 99%;
+    height: 50%;
+    background-position: center;
+    background-size: cover;
+}
+
+.Ourteammainpageouterdownbox{
+    width: 100%;
+    height: 40%;
+    /* background-color: red; */
+}
+
+.Ourterfirstcirclbox{
+    width: 20%;
+    height: 100%;
+}
+
+
+.Ourterfirstcirclbox1{
+    width: 55%;
+    height: 35%;
+}
+
+.Ourterfirstcname1 h3{
+    font-size: 4px;
+}
+
+.Ourterfirstcname2 p{
+    font-size: 4px;
+}
+
+    
 }
