--- a/src/Components/Onboarding/HospitalLogin.css
+++ b/src/Components/Onboarding/HospitalLogin.css
@@ -154,7 +154,12 @@ gap: 20px;
   align-items: flex-end;
   font-size: 11px;
   font-family: Poppins;
-  color: grey;
+  color: #808080;
+  cursor: pointer;
+}
+
+.forgotpass h3{
+  cursor: pointer;
 }
 
 
@@ -176,7 +181,7 @@ gap: 20px;
   border-radius: 5px;
   color: white;
   cursor: pointer;
-  font-size: 20px;
+  /* font-size: 20px; */
   font-weight: 400;
   font-family: poppins;
  }
