--- a/src/Components/Dashboard/AdminAppointmentReview.css
+++ b/src/Components/Dashboard/AdminAppointmentReview.css
@@ -91,7 +91,7 @@
 }
 
 /* Mobile view iphone-13 */
-@media screen and (width <= 480px) {
+@media screen and (max-width: 480px) {
   .AdminAppointmentReview-page {
     min-width: 100%;
   }
@@ -111,7 +111,7 @@
 }
 
 /* Mobile view iphone-5 */
-@media screen and (width <= 320px) {
+@media screen and (max-width: 320px) {
     .admin-appointment-review-header-content{
         padding: 0px;
         font-size: 22px;
@@ -135,14 +135,14 @@
 }
 
 /*Tablet view*/
-@media screen and (width <= 768px) {
+@media screen and (max-width: 768px) {
   .AdminAppointmentReview-page {
     width: calc(100% - 50px);
   }
 }
 
 /* big-tablet */
-@media screen and (width <= 834px) {
+@media screen and (max-width: 834px) {
     .admin-appointment-review-content {
       justify-content: space-evenly;
     }
