--- a/src/Components/Dashboard/AdminBookingReview.css
+++ b/src/Components/Dashboard/AdminBookingReview.css
@@ -140,7 +140,7 @@
 }
 
 /* Mobile view iphone-13 */
-@media screen and (width <= 480px) {
+@media screen and (max-width: 480px) {
   .AdminBookingReview-page {
     min-width: 100%;
   }
@@ -215,18 +215,18 @@
 }
 
 /* Mobile view iphone-5 */
-@media screen and (width <= 320px) {
+@media screen and (max-width: 320px) {
 }
 
 /*Tablet view*/
-@media screen and (width <= 768px) {
+@media screen and (max-width: 768px) {
   .AdminBookingReview-page {
     width: calc(100% - 50px);
   }
 }
 
 /* big-tablet */
-@media screen and (width <= 834px) {
+@media screen and (max-width: 834px) {
   .AdminBookingReview-page-container {
     width: 95%;
   }
