--- a/src/Components/Dashboard/AdminBurgerMenu.css
+++ b/src/Components/Dashboard/AdminBurgerMenu.css
@@ -83,16 +83,16 @@
 }
 
 /* Mobile view iphone-13 */
-@media screen and (width <= 480px) {
+@media screen and (max-width: 480px) {
     .admin-burger-menu{
         display: flex;
     }
 }
 
 /* Mobile view iphone-5 */
-@media screen and (width <= 320px) {}
+@media screen and (max-width: 320px) {}
 
 /*Tablet view*/
-@media screen and (width <= 768px) {
+@media screen and (max-width: 768px) {
 
 }
