--- a/src/Components/Dashboard/AdminHeader.css
+++ b/src/Components/Dashboard/AdminHeader.css
@@ -138,7 +138,7 @@
 }
 
 /*Mobile view iPhone-13pro*/
-@media screen and (width <= 480px) {
+@media screen and (max-width: 480px) {
   .dashboard-right .search-icon {
     display: block;
   }
@@ -160,7 +160,7 @@
 }
 
 /* Mobile view iphone-5 */
-@media screen and (width <= 320px) {
+@media screen and (max-width: 320px) {
     .dashboard-right {
         padding-left: 10px;
       }
@@ -170,7 +170,7 @@
 }
 
 /*Tablet view*/
-@media screen and (width <= 768px) {
+@media screen and (max-width: 768px) {
   .search-box {
     display: none;
   }
