--- a/src/Components/Dashboard/AdminLeftNav.css
+++ b/src/Components/Dashboard/AdminLeftNav.css
@@ -71,7 +71,7 @@
 }
 
 /* Mobile view iphone-13 */
-@media screen and (width <= 480px) {
+@media screen and (max-width: 480px) {
     .admin-left-nav{
         display: none;
         max-width: 10px;
@@ -79,10 +79,10 @@
 }
 
 /* Mobile view iphone-5 */
-@media screen and (width <= 320px) {}
+@media screen and (max-width: 320px) {}
 
 /*Tablet view*/
-@media screen and (width <= 768px) {
+@media screen and (max-width: 768px) {
     .dashboard-text-container{
         display: none;
     }
