--- a/src/Components/Dashboard/AdminRescheduleReview.css
+++ b/src/Components/Dashboard/AdminRescheduleReview.css
@@ -178,7 +178,7 @@
   }
   
   /* Mobile view iphone-13 */
-  @media screen and (width <= 480px) {
+  @media screen and (max-width: 480px) {
     .AdminRescheduleReview-page {
       min-width: 100%;
     }
@@ -257,18 +257,18 @@
   }
   
   /* Mobile view iphone-5 */
-  @media screen and (width <= 320px) {
+  @media screen and (max-width: 320px) {
   }
   
   /*Tablet view*/
-  @media screen and (width <= 768px) {
+  @media screen and (max-width: 768px) {
     .AdminRescheduleReview-page {
       width: calc(100% - 50px);
     }
   }
   
   /* big-tablet */
-  @media screen and (width <= 834px) {
+  @media screen and (max-width: 834px) {
     .AdminRescheduleReview-page-container {
       width: 95%;
     }
