--- a/src/Components/PatientDashboard/PatientHeader.css
+++ b/src/Components/PatientDashboard/PatientHeader.css
@@ -1,42 +1,79 @@
-
-
-.dashboard-header-wrapper2{
-    justify-content: space-between;
-    /* background-color: red; */
+.dashboard-header-wrapper2 {
+  justify-content: space-between;
+  /* background-color: red; */
 }
 
-.PatientHeaderSearch{
-    /* background-color: red; */
-    /* position: relative; */
+.search-results {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  position: absolute;
+  z-index: 5;
+  top: 54px;
+  right: 80px;
+  /* left: 30%; */
+  /* background-color: yellow; */
+  animation: slideIn 0.7s ease-in-out;
 }
 
-.search-results{
-    display: flex;
-    position: absolute;
-    z-index: 99;
-    bottom: -10px;
-    left: 390px;
-    width: 300px;
-    height: max-content;
-    background-color: rgb(75, 170, 170);
+@keyframes slideIn {
+    from {
+        opacity: 0;
+        transform: translateY(-10px);
+    }
+    to {
+        opacity: 1;
+        transform: translateY(0);
+    }
 }
 
-.search-results2{
-    display: flex;
-    align-items: center;
-    gap: 20px;
-    justify-content: space-around;
-    z-index: 77;
+.search-results4 {
+  width: max-content;
+  padding-block-start: 7px;
+  /* height: 30px; */
+  display: flex;
+  border-radius: 2px;
+  overflow: hidden;
+  flex-direction: column;
+  gap: 10px;
+  background-color: #2c7da0;
 }
 
-.profile-image-holder{
-    padding: 3px;
+.search-results3 {
+  height: 30px;
+  min-width: 300px;
+  display: flex;
+  align-items: center;
+  gap: 20px;
+  color: #fff;
+  padding-inline-start: 7px;
+  border-bottom: 1px solid #fff;
+  cursor: pointer;
+  /* background-color: rgb(225, 11, 11); */
 }
 
-.profile-image-holder img{
-    width: 100%;
-    height: 100%;
-    object-fit: contain;
+.search-results3 > h4 {
+  font-weight: 400;
+  font-size: 17px;
+  text-transform: capitalize;
+}
+.search-results3 > p {
+  font-style: italic;
 }
 
+.profile-image-holder {
+  padding: 3px;
+}
 
+.profile-image-holder img {
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+}
+
+@media screen and (max-width: 500px) {
+  .search-results {
+    right: 0px;
+  }
+}
