--- a/src/Components/PatientDashboard/PatientProfilePage.css
+++ b/src/Components/PatientDashboard/PatientProfilePage.css
@@ -59,7 +59,7 @@
 
 
 /* Mobile view iphone-13 */
-@media screen and (width <= 480px) {
+@media screen and (max-width: 480px) {
     .PatientProfilePage-container {
       min-width: 100%;
     }
@@ -68,18 +68,18 @@
   }
   
   /* Mobile view iphone-5 */
-  @media screen and (width <= 320px) {
+  @media screen and (max-width: 320px) {
   }
   
   /*Tablet view*/
-  @media screen and (width <= 768px) {
+  @media screen and (max-width: 768px) {
     .PatientProfilePage-container {
       width: calc(100% - 50px);
     }
   }
   
   /* big-tablet */
-  @media screen and (width <= 834px) {
+  @media screen and (max-width: 834px) {
     .PatientProfilePage-wrapper{
       width: 90%;
     }
