--- a/src/Components/LandingPage/HomePageHeader.css
+++ b/src/Components/LandingPage/HomePageHeader.css
@@ -142,7 +142,7 @@ nav:hover {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding-inline-end: 20px;
+    /* padding-inline-end: 20px; */
   }
 
   .landingPageBurgerMenu {
@@ -175,18 +175,20 @@ nav:hover {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    /* background-color: green; */
   }
 
   .Mainheaderlogo {
     width: 30%;
     height: 100%;
+    /* background-color: #2c7da0; */
   }
 
   .Mainheaderlogo > img {
     width: 50%;
     height: 50%;
     object-fit: contain;
-    margin-left: 15px;
+    /* margin-left: 15px; */
   }
 
   .landingPageBurgerMenu {
