--- a/src/Components/PopUp/HeaderBurgerPopUp.css
+++ b/src/Components/PopUp/HeaderBurgerPopUp.css
@@ -1,24 +1,24 @@
-.HeaderBurgerPopUpPage{
-    width: 100%;
-    height: 100vh;
-    background-color: transparent;
-    backdrop-filter: blur(5px);
-    display: flex;
-    justify-content: flex-end;
-    color: white;
-    position: fixed;
-    z-index: 5;
-    animation: slideIn 0.4s ease-in-out;
+.HeaderBurgerPopUpPage {
+  width: 100%;
+  height: 100vh;
+  background-color: transparent;
+  backdrop-filter: blur(5px);
+  display: flex;
+  justify-content: flex-end;
+  color: white;
+  position: fixed;
+  z-index: 5;
+  animation: slideIn 0.4s ease-in-out;
 }
 
 @keyframes slideIn {
-    from {
-        right: 100%;
-    }
-    to {
-        right: 0;
-    }
-    /* from {
+  from {
+    right: 100%;
+  }
+  to {
+    right: 0;
+  }
+  /* from {
         opacity: 0;
         transform: translateX(-10px);
     }
@@ -28,64 +28,63 @@
     } */
 }
 
-.HeaderBurgerPopUpPageWrapper{
-    width: 50%;
-    height: 100%;
-    background-color: #2c7da0;
-    display: flex;
-    align-items: center;
-    flex-direction: column;
-    border-radius: 50px 0px 0px 0px;
+.HeaderBurgerPopUpPageWrapper {
+  width: 50%;
+  height: 100%;
+  background-color: #2c7da0;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  border-radius: 50px 0px 0px 0px;
 }
 
-.HeaderBurgerCancelButton{
-    width: 90%;
-    height: 10%;
-    font-size: 40px;
-    /* background-color: green; */
-    display: flex;
-    justify-content: flex-end;
-    align-items: center;
-    color: #fff;
+.HeaderBurgerCancelButton {
+  width: 90%;
+  height: 10%;
+  font-size: 40px;
+  /* background-color: green; */
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  color: #fff;
 }
 
-.HeaderBurgerCancelButton:hover{
-    color: red;
+.HeaderBurgerCancelButton:hover {
+  color: red;
 }
 
-.HeaderBurgerPopUpPageContent{
-    height: 90%;
-    width: 90%;
-    display: flex;
-    flex-direction: column;
-
+.HeaderBurgerPopUpPageContent {
+  height: 90%;
+  width: 90%;
+  display: flex;
+  flex-direction: column;
 }
 
-.HeaderBurgerPopUpPageContent div{
-    display: flex;
-    align-items: center;
-    width: 100%;
-    height: 10%;
-    font-size: 24px;
-    border-bottom: 1px solid #fff;
-    animation: slideIn 0.9s ease-in-out;
+.HeaderBurgerPopUpPageContent div {
+  display: flex;
+  align-items: center;
+  width: 100%;
+  height: 10%;
+  font-size: 24px;
+  border-bottom: 1px solid #fff;
+  animation: slideIn 0.9s ease-in-out;
 }
 
 @keyframes slideIn {
-    from {
-        opacity: 0;
-        transform: translateY(-10px);
-    }
-    to {
-        opacity: 1;
-        transform: translateY(0);
-    }
+  from {
+    opacity: 0;
+    transform: translateY(-10px);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
 }
 
-.HeaderBurgerPopUpPageContent div:hover{
-    background-color: white;
-    color: #2c7da0;
-    /* display: flex;
+.HeaderBurgerPopUpPageContent div:hover {
+  background-color: white;
+  color: #2c7da0;
+  /* display: flex;
     align-items: center;
     width: 100%;
     height: 10%;
@@ -93,30 +92,29 @@
     border-bottom: 1px solid #fff; */
 }
 
-@media screen and (max-width:500px) {
-    .HeaderBurgerPopUpPageWrapper{
-        width: 70%;
-    }
-    
+@media screen and (max-width: 500px) {
+  .HeaderBurgerPopUpPageWrapper {
+    width: 70%;
+  }
 }
 @media screen and (max-width: 350px) {
-    .HeaderBurgerCancelButton{
-        width: 90%;
-        height: 12%;
-        font-size: 27px;
-        /* background-color: green; */
-        display: flex;
-        justify-content: flex-end;
-        align-items: center;
-        color: #fff;
-    }
-    .HeaderBurgerPopUpPageContent{
-        height: 80%;
-    }
+  .HeaderBurgerCancelButton {
+    width: 90%;
+    height: 12%;
+    font-size: 27px;
+    /* background-color: green; */
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    color: #fff;
+  }
+  .HeaderBurgerPopUpPageContent {
+    height: 80%;
+  }
 
-    .HeaderBurgerPopUpPageContent div{
-        height: 15%;
-        font-size: 16px;
-    font-style: italic;
-    }
+  .HeaderBurgerPopUpPageContent div {
+    height: 15%;
+    font-size: 14px;
+    /* font-style: italic; */
+  }
 }
