--- a/src/Components/LandingPage/Testimonia.css
+++ b/src/Components/LandingPage/Testimonia.css
@@ -1,6 +1,6 @@
 .testimonalbody{
     width: 100%;
-    height: 100vh;
+    height: max-content;
     background-color: #ECEAF7;
     display: flex;
     align-items: center;
@@ -14,6 +14,7 @@
     height: 25%;
     /* background-color: red; */
     display: flex;
+    /* flex-wrap: wrap; */
     align-items: flex-start;
     justify-content: center;
     flex-direction: column;
@@ -39,6 +40,7 @@
     height: 55%;
     /* background-color: blue; */
     display: flex;
+    flex-wrap: wrap;
     align-items: center;
     justify-content: center;
     gap: 20px;
@@ -47,7 +49,8 @@
 
 .carrddiv{
     width: 26%;
-    height: 80%;
+    /* height: 80%; */
+    height: 300px;
     background-color: white;
     box-shadow: 0px 0px 20px 1px lightgrey;
     display: flex;
