--- a/src/Components/PatientDashboard/PatientHeader.css
+++ b/src/Components/PatientDashboard/PatientHeader.css
@@ -66,13 +66,14 @@
 }
 
 .profile-image-holder {
-  padding: 3px;
+  overflow: hidden;
+  object-fit: cover;
 }
 
 .profile-image-holder img {
   width: 100%;
   height: 100%;
-  object-fit: contain;
+  object-fit: cover;
 }
 
 @media screen and (max-width: 500px) {
