--- a/src/Components/LandingPage/HomePageHeader.css
+++ b/src/Components/LandingPage/HomePageHeader.css
@@ -147,11 +147,17 @@ nav:hover {
 
   .landingPageBurgerMenu {
     display: flex;
-    width: 40px;
+    width: 60px;
     height: 100%;
     cursor: pointer; 
     /* margin-right: 20px; */
     /* background-color: green;  */
+  }
+
+  .landingPageBurgerMenu img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
   }
 
   .Mainheaderlogo {
