--- a/src/Components/Onboarding/HospitalLogin.css
+++ b/src/Components/Onboarding/HospitalLogin.css
@@ -123,21 +123,21 @@ gap: 20px;
 }
 
 .theform{
-  width: 90%;
+  width: 95%;
   height:  50px;
   display: flex;
   align-items: center;
   justify-content: center;
-  /* background-color: blue; */
+  background-color: blue;
  }
 
 .theform > input{
-  width: 90%;
+  width: 100%;
   height: 100%;
   border: 1px solid lightblue;
-  background-color: red;
+  /* background-color: red; */
   border-radius: 8px;
-  outline: 10px;
+  outline: none;
   font-size: 14px;
   font-size: 250;
   font-family: poppins;
