--- a/src/Components/Onboarding/HospitalRegister.css
+++ b/src/Components/Onboarding/HospitalRegister.css
@@ -79,7 +79,7 @@
 }
 
 .theformholder {
-  width: 90%;
+  width: 95%;
   min-height: 50px;
   display: flex;
   align-items: center;
@@ -152,6 +152,7 @@
   justify-content: center;
   align-items: center;
   flex-direction: column;
+  gap: 7px;
 }
 
 .submitbttn {
