--- a/src/Components/Dashboard/AdminRightNav.css
+++ b/src/Components/Dashboard/AdminRightNav.css
@@ -138,7 +138,7 @@
   justify-content: center;
 }
 .attribute-fixed-width {
-  min-width: 200px;
+  width: 200px;
   height: 100%;
   /* background-color: red; */
 }
