--- a/src/Components/PatientDashboard/PatientHospitalSelection.css
+++ b/src/Components/PatientDashboard/PatientHospitalSelection.css
@@ -3,9 +3,16 @@
     color: #2c7da0;
 }
 
-.attribute-fixed-width{
-    /* text-overflow: hidden; */
-    text-align: center;
-    text-overflow: ellipsis;
+#patientDetailTrunc{
+    width: 90%;
     overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+}
+
+.date-record{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    /* background-color: blue; */
 }
