--- a/src/Components/LandingPage/ServiceCard.css
+++ b/src/Components/LandingPage/ServiceCard.css
@@ -62,10 +62,9 @@
   width: 35%;
   height: 300px;
   background-color: white;
-  /* background-color: #373737; */
+  /* background-color: blue; */
   /* font-weight: 600; */
   box-shadow: rgba(0, 0, 0, 0.15) 0px 3px 3px 0px;
-  /* background-color: gray; */
   display: flex;
   align-items: center;
   flex-direction: column;
@@ -78,6 +77,15 @@
 .carddiv2Img {
   width: 90px;
   height: 90px;
+  /* background-color: green; */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.secureImg{
+  padding-inline-end: 10px;
+  /* background-color: red; */
 }
 
 .carddiv2Img > img {
